--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,6 @@ adapters = [
     { name = "QQ", module_name = "nonebot.adapters.qq" },
     #    { name = "Console", module_name = "nonebot.adapters.console" },
 ]
-plugins = []
+plugins = ["nonebot_plugin_localstore", "nonebot_plugin_apscheduler"]
 plugin_dirs = ["src/plugins"]
 builtin_plugins = ["echo"]
