--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.11.0
+APScheduler==3.11.0
 certifi==2025.8.3
 cffi==2.0.0
 click==8.3.0
@@ -25,8 +26,11 @@ nonebot-adapter-console==0.9.0
 nonebot-adapter-onebot==2.4.6
 nonebot-adapter-qq==1.6.5
 nonebot-adapter-telegram==0.1.0b20
+nonebot-plugin-apscheduler==0.5.0
+nonebot-plugin-localstore==0.7.4
 nonebot2==2.4.3
 nonechat==0.6.1
+nonestorage==0.1.0
 platformdirs==4.4.0
 propcache==0.3.2
 pycparser==2.23
@@ -42,6 +46,7 @@ starlette==0.48.0
 textual==3.7.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+tzlocal==5.3.1
 uc-micro-py==1.0.3
 uvicorn==0.36.1
 uvloop==0.21.0
